Update package.json with additional metadata and dependencies
Added description, scripts, keywords, author, and updated dependencies.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,33 @@
 {
-  "name": "security-panel",
-  "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
-  "dependencies": {
-    "express": "^4.19.2",
-    "axios": "^1.6.7",
-    "express-session": "^1.17.3",
-    "ejs": "^3.1.10",
-    "dotenv": "^16.4.5"
-  }
+"name": "security-panel",
+"version": "1.0.0",
+"description": "Discord bot security and password system with admin dashboard",
+"type": "module",
+"main": "server.js",
+"scripts": {
+"start": "node server.js",
+"dev": "nodemon server.js"
+},
+"keywords": [
+"discord",
+"bot",
+"security",
+"dashboard",
+"password"
+],
+"author": "YourName",
+"license": "MIT",
+"dependencies": {
+"axios": "^1.6.7",
+"body-parser": "^1.20.2",
+"cors": "^2.8.5",
+"dotenv": "^16.3.1",
+"ejs": "^3.1.9",
+"express": "^4.18.2",
+"express-session": "^1.17.3",
+"mongoose": "^7.3.4"
+},
+"devDependencies": {
+"nodemon": "^3.0.2"
+}
 }
